[package]
name = "preempt-rt"
version = "0.2.0"
edition = "2024"
license = "MIT"
description = "A lightweight Rust library for using the kernel's PREEMPT_RT scheduling functionality"

[dependencies]
libc = { version = "0.2.174", features = ["extra_traits"] }
thiserror = "2.0.12"

[features]
default = ["non-linux-stubs"]
non-linux-stubs = []
